Update logo and try jvm args